<resources>
    <string name="app_name">오모</string>
    <string name="splash_text">오늘 뭐 입지?</string>

    <!-- profile -->
    <string name="profile_mod"><u>프로필 편집</u></string>
    <string name="profile_post">게시물</string>
    <string name="profile_today_weather">오늘의 날씨</string>
    <string name="profile_subscribe">구독</string>

    <!-- Start Fragment -->
    <string name="signin">로그인</string>
    <string name="signup">회원가입</string>

    <!-- SignIn Fragment -->
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="password_search"><u>비밀번호를 잊으셨나요?</u></string>
    <string name="wrong_email_format">서식에 맞지 않는 이메일입니다.</string>

    <!-- SignUp Fragment -->
    <string name="nickname">닉네임</string>
    <string name="duplicate_check"><u>중복확인</u></string>
    <string name="nickname_length_error">닉네임은 8자 이내로 설정 가능합니다.</string>
    <string name="nickname_duplicated">중복된 닉네임입니다. 다른 닉네임으로 변경해주세요.</string>
    <string name="nickname_available">사용 가능한 닉네임입니다.</string>

    <string name="password_rules">비밀번호는 영문, 숫자(특수문자 포함) 8자 이상으로 설정 가능합니다.</string>
    <string name="password_validation">서식에 맞지 않는 비밀번호입니다.</string>

    <string name="email_duplicated">이미 등록된 이메일입니다.</string>
    <string name="email_available">사용 가능한 이메일입니다.</string>

    <!-- PasswordAssistance Fragment -->
    <string name="password_assistance_title">등록된 이메일로 찾기</string>
    <string name="password_assistance_description">가입 당시 입력한 이메일을 통해 인증 후 새로운 비밀번호를 등록해주세요.</string>
    <string name="send_verification_code">인증번호 전송</string>
    <string name="verification_code">인증번호</string>
    <string name="next">다음</string>
    <string name="wrong_password_format">서식에 맞지 않는 비밀번호입니다.</string>
    <string name="password_not_matching">비밀번호가 일치하지 않습니다.</string>

    <!-- PasswordReset Fragment -->
    <string name="password_reset_title">비밀번호 재설정</string>
    <string name="password_reset_description">비밀번호는 영문, 숫자 (특수문자 포함) 8자 이상으로 설정 가능합니다.</string>
    <string name="new_password_input">새 비밀번호 입력</string>
    <string name="new_password_confirm">비밀번호 확인</string>

    <!-- Home Fragment -->
    <string name="home_sunny">맑음</string>
    <string name="home_cloudy">흐림</string>
    <string name="home_rainy">비</string>
    <string name="home_snowy">눈</string>

    <string name="celsius">℃</string>
    <string name="home_recommendations_feed">추천 피드</string>

    <string name="home_current_temperature">%1$s℃</string>

    <!-- Search Fragment -->
    <string name="search_popular_category">인기 카테고리</string>
    <string name="search_current_keyword">최근 검색어</string>
    <string name="search_current_keyword_empty">
        최근 검색한 내용이 없습니다. 관심있는 검색어를 입력해보세요.
    </string>
    <string name="search_keyword">\'%1$s\'로 검색한 결과입니다.</string>
    <string name="search_popular_keyword_up">▲</string>
    <string name="search_popular_keyword_stay">─</string>
    <string name="search_popular_keyword_down">▼</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>