<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="24dp"
    tools:context=".presentation.signin.SignInFragment">

    <ImageView
        android:id="@+id/iv_signin_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo_27dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/font_pretendard_medium"
        android:text="@string/signin"
        android:textColor="@color/black_1a"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_signin_logo"
        app:layout_constraintStart_toEndOf="@id/iv_signin_logo"
        app:layout_constraintTop_toTopOf="@id/iv_signin_logo" />

    <TextView
        android:id="@+id/tv_signin_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/font_pretendard_regular"
        android:text="@string/email"
        android:textColor="@color/black_1a"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_signin_logo" />

    <EditText
        android:id="@+id/et_signin_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/background_login_edit_text"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/tv_signin_wrong_email_format"
        app:layout_constraintTop_toBottomOf="@id/tv_signin_email"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/tv_signin_wrong_email_format"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_pretendard_regular"
        android:includeFontPadding="false"
        android:text="@string/wrong_email_format"
        android:textColor="@color/red_f5"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/tv_signin_password"
        app:layout_constraintStart_toStartOf="@id/et_signin_email"
        app:layout_constraintTop_toBottomOf="@id/et_signin_email" />


    <TextView
        android:id="@+id/tv_signin_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/font_pretendard_regular"
        android:text="@string/password"
        android:textColor="@color/black_1a"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_signin_wrong_email_format" />

    <EditText
        android:id="@+id/et_signin_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/background_login_edit_text"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/tv_signin_password"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/tv_signin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:background="@drawable/background_sign_in_text"
        android:fontFamily="@font/font_pretendard_regular"
        android:gravity="center"
        android:includeFontPadding="false"
        android:paddingVertical="8dp"
        android:text="@string/signin"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_signin_password" />

    <TextView
        android:id="@+id/tv_signin_password_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/password_search"
        android:textColor="@color/grey_aa"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_signin" />
</androidx.constraintlayout.widget.ConstraintLayout>