<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="24dp"
    tools:context=".presentation.password.PasswordAssistanceFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_password_assistance_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/font_pretendard_regular"
                android:text="@string/password_assistance_title"
                android:textColor="@color/black_1a"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_goneMarginTop="34dp" />

            <TextView
                android:id="@+id/tv_password_assistance_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/font_pretendard_regular"
                android:text="@string/password_assistance_description"
                android:textColor="@color/grey_ae"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_password_assistance_title"
                app:layout_goneMarginTop="34dp" />


            <TextView
                android:id="@+id/tv_password_assistance_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/font_pretendard_regular"
                android:text="@string/nickname"
                android:textColor="@color/black_1a"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_password_assistance_description" />

            <EditText
                android:id="@+id/et_password_assistance_nickname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/background_login_edit_text"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColor="@color/black_1a"
                app:layout_constraintTop_toBottomOf="@id/tv_password_assistance_nickname"
                tools:ignore="LabelFor,TextFields" />

            <TextView
                android:id="@+id/tv_password_assistance_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/font_pretendard_regular"
                android:text="@string/email"
                android:textColor="@color/black_1a"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_password_assistance_nickname" />

            <EditText
                android:id="@+id/et_password_assistance_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/background_login_edit_text"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColor="@color/black_1a"
                app:layout_constraintTop_toBottomOf="@id/tv_password_assistance_email"
                tools:ignore="LabelFor,TextFields" />

            <TextView
                android:id="@+id/tv_password_assistance_send_verification_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_sign_in_text"
                android:fontFamily="@font/font_pretendard_regular"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingHorizontal="30dp"
                android:paddingVertical="8dp"
                android:text="@string/send_verification_code"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_password_assistance_email" />

            <TextView
                android:id="@+id/tv_password_assistance_verification_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:fontFamily="@font/font_pretendard_regular"
                android:text="@string/verification_code"
                android:textColor="@color/black_1a"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_password_assistance_send_verification_code" />

            <EditText
                android:id="@+id/et_password_assistance_verification_code"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/background_login_edit_text"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColor="@color/black_1a"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/tv_password_assistance_verification_code"
                tools:ignore="LabelFor,TextFields" />

            <TextView
                android:id="@+id/tv_password_assistance_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="58dp"
                android:background="@drawable/background_sign_in_text"
                android:fontFamily="@font/font_pretendard_regular"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingHorizontal="88dp"
                android:paddingVertical="8dp"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_password_assistance_verification_code" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
