<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.start.StartFragment">

    <data>

        <variable
            name="viewModel"
            type="oh.mo.presentation.start.StartViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo_splash"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/font_pretendard_medium"
            android:includeFontPadding="false"
            android:text="@string/app_name"
            android:textColor="@color/blue_64"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_login_logo" />

        <TextView
            android:id="@+id/tv_login_signin"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:background="@drawable/background_sign_in_text"
            android:fontFamily="@font/font_pretendard_regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/signin"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_login_logo" />

        <TextView
            android:id="@+id/tv_login_signup"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_sign_up_text"
            android:fontFamily="@font/font_pretendard_regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/signup"
            android:textColor="@color/blue_64"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_login_signin" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
