<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.password.PasswordResetFragment">

    <data>

        <variable
            name="viewModel"
            type="oh.mo.presentation.password.PasswordResetViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="24dp">

        <TextView
            android:id="@+id/tv_password_reset_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/font_pretendard_regular"
            android:text="@string/password_reset_title"
            android:textColor="@color/black_1a"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_goneMarginTop="34dp" />

        <TextView
            android:id="@+id/tv_password_reset_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/font_pretendard_regular"
            android:text="@string/password_reset_description"
            android:textColor="@color/grey_ae"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_password_reset_title"
            app:layout_goneMarginTop="34dp" />


        <TextView
            android:id="@+id/tv_password_reset_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/font_pretendard_regular"
            android:text="@string/new_password_input"
            android:textColor="@color/black_1a"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_password_reset_description" />

        <EditText
            android:id="@+id/et_password_reset_new"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/background_login_edit_text"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/black_1a"
            app:layout_constraintTop_toBottomOf="@id/tv_password_reset_new"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/tv_password_reset_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/font_pretendard_regular"
            android:text="@string/new_password_confirm"
            android:textColor="@color/black_1a"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_password_reset_new" />

        <EditText
            android:id="@+id/et_password_reset_confirm"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/background_login_edit_text"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/black_1a"
            app:layout_constraintTop_toBottomOf="@id/tv_password_reset_confirm"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/tv_password_reset_verification_code"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:background="@drawable/background_sign_in_text"
            android:fontFamily="@font/font_pretendard_regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:paddingVertical="8dp"
            android:text="@string/password_reset_title"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_password_reset_confirm" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>