<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="24dp"
    tools:context=".presentation.signup.SignUpFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="56dp">

            <ImageView
                android:id="@+id/iv_signup_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logo_27dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/font_pretendard_medium"
                android:text="@string/signup"
                android:textColor="@color/black_1a"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/iv_signup_logo"
                app:layout_constraintStart_toEndOf="@id/iv_signup_logo"
                app:layout_constraintTop_toTopOf="@id/iv_signup_logo" />

            <TextView
                android:id="@+id/tv_signup_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:fontFamily="@font/font_pretendard_regular"
                android:text="@string/nickname"
                android:textColor="@color/black_1a"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_signup_logo" />

            <TextView
                android:id="@+id/tv_signup_nickname_duplicate_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/font_pretendard_medium"
                android:includeFontPadding="false"
                android:letterSpacing="0.02"
                android:text="@string/duplicate_check"
                android:textColor="@color/grey_ae"
                android:textSize="11sp"
                android:translationZ="1dp"
                app:layout_constraintBottom_toBottomOf="@id/et_signup_nickname"
                app:layout_constraintEnd_toEndOf="@id/et_signup_nickname"
                app:layout_constraintTop_toTopOf="@id/et_signup_nickname" />


            <EditText
                android:id="@+id/et_signup_nickname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/background_login_edit_text"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColor="@color/black_1a"
                app:layout_constraintTop_toBottomOf="@id/tv_signup_nickname"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/tv_signup_nickname_validation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/font_pretendard_regular"
                android:includeFontPadding="false"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/et_signup_nickname"
                app:layout_constraintTop_toBottomOf="@id/et_signup_nickname" />

            <TextView
                android:id="@+id/tv_signup_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/font_pretendard_regular"
                android:text="@string/password"
                android:textColor="@color/black_1a"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_signup_nickname_validation" />

            <EditText
                android:id="@+id/et_signup_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/background_login_edit_text"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@color/black_1a"
                app:layout_constraintTop_toBottomOf="@id/tv_signup_password"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/tv_signup_password_rules"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:includeFontPadding="false"
                android:text="@string/password_rules"
                android:textColor="@color/grey_aa"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_signup_password" />

            <TextView
                android:id="@+id/tv_signup_password_validation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/font_pretendard_regular"
                android:includeFontPadding="false"
                android:text="@string/password_validation"
                android:textColor="@color/red_f5"
                android:textSize="14sp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/tv_signup_password_rules"
                app:layout_constraintTop_toBottomOf="@id/tv_signup_password_rules" />

            <TextView
                android:id="@+id/tv_signup_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/font_pretendard_regular"
                android:text="@string/email"
                android:textColor="@color/black_1a"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_signup_password_validation" />

            <TextView
                android:id="@+id/tv_signup_email_duplicate_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/font_pretendard_medium"
                android:includeFontPadding="false"
                android:letterSpacing="0.02"
                android:text="@string/duplicate_check"
                android:textColor="@color/grey_ae"
                android:textSize="11sp"
                android:translationZ="1dp"
                app:layout_constraintBottom_toBottomOf="@id/et_signup_email"
                app:layout_constraintEnd_toEndOf="@id/et_signup_email"
                app:layout_constraintTop_toTopOf="@id/et_signup_email" />

            <EditText
                android:id="@+id/et_signup_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/background_login_edit_text"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColor="@color/black_1a"
                app:layout_constraintTop_toBottomOf="@id/tv_signup_email"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/tv_signup_email_validation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/font_pretendard_regular"
                android:includeFontPadding="false"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/et_signup_email"
                app:layout_constraintTop_toBottomOf="@id/et_signup_email" />


            <TextView
                android:id="@+id/tv_signup"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="56dp"
                android:background="@drawable/background_sign_in_text"
                android:fontFamily="@font/font_pretendard_regular"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingVertical="8dp"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_signup_email_validation" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>